Changes and corrections

--- a/great-articals.html
+++ b/great-articals.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
-  <meta content="" name="description"/>
-  <meta content="selvastics" name="author"/>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet"/>
-  <title>
-   Selvastics: Statistics and Data Analysis Tutorials
-  </title>
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-  <!-- Additional CSS Files -->
-  <link href="assets/css/fontawesome.css" rel="stylesheet"/>
-  <link href="assets/css/templatemo-edu-meeting.css" rel="stylesheet"/>
-  <link href="assets/css/owl.css" rel="stylesheet"/>
-  <link href="assets/css/lightbox.css" rel="stylesheet"/>
-  <!--
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Template Mo">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+    <title>Selvastics: Statistics and Data Analysis Tutorials</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/lightbox.css">
+<!--
+
 -->
  </head>
  <body>
@@ -140,7 +148,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>descriptive indices</h2>
+          <h2>great articals</h2>
           <h6>by selvastics</h6>
         </div>
       </div>
@@ -150,7 +158,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descriptive Statistics</title>
+    <title>Great articals</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       .meeting-single-item {
@@ -161,7 +169,7 @@
 
 
   <body>
-    <section class="meetings-page" id="meetings">
+    <section class="meetings-page" id="meetings";>
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -169,71 +177,53 @@
               <div class="col-lg-12">
                 <div class="meeting-single-item">
                   <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
-                    <h1>Inferential Statistics</h1>
-                    <p>Inferential statistics is a branch of statistics that deals with making predictions or inferences about a population based on a sample of data taken from the population. In this section, I'll discuss probability distributions, sampling distributions, estimation, and hypothesis testing.</p>
+                    <h1>Great Articals in Statistics</h1>
+                    <p>This blog post highlights some of the most influential papers in the field of statistics. These papers cover a range of topics in statistical probability, including hypothesis testing, exploratory data analysis, rare events, resampling methods, time series analysis, model selection, multiple testing, and regression analysis.</p>
                     <hr>
                     <div class="text-box">
-                      <h3>Probability Distributions</h3>
-                      <p>Probability distributions describe the likelihood of different outcomes in an experiment or event. The most commonly used ones in inferential statistics are the normal distribution, the binomial distribution, and the Poisson distribution.</p>
+                      <h5>Benjamini, Y., & Hochberg, Y. (1995). "Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing"</h5>
+                      <p>This paper presents the Benjamini-Hochberg procedure for controlling the false discovery rate in multiple hypothesis testing, which has become a standard approach in many fields.</p>
                       <br>
-                      <h4>Normal Distribution</h4>
-                      <p>The normal distribution, also known as the Gaussian distribution, is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent in occurrence than data far from the mean. The formula for the normal distribution is:</p>
-                      <p class="formula">\(f(x) = \frac{1}{\sigma\sqrt{2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}\)</p>
-                      <p>where \(f(x)\) is the probability density function, \(\mu\) is the mean, \(\sigma\) is the standard deviation, and \(x\) is the random variable.</p>
+                      <h5>Box, G. E. P., & Jenkins, G. M. (1970). "Time Series Analysis: Forecasting and Control"</h5>
+                      <p>This influential book presents the Box-Jenkins methodology for time series analysis, which has become a standard approach for modeling and forecasting time series data.</p>
                       <br>
-                      <h4>Binomial Distribution</h4>
-                      <p>The binomial distribution is a discrete probability distribution of the number of successes in a sequence of n independent experiments. The formula for the binomial distribution is:</p>
-                      <p class="formula">\(P(X=k) = {n \choose k}p^k(1-p)^{n-k}\)</p>
-                      <p>where \(P(X=k)\) is the probability of \(k\) successes in \(n\) trials, \(p\) is the probability of success, and \({n \choose k}\) is the binomial coefficient.</p>
+                      <h5>Cohen, J. (1994). "The Earth is Round (p < .05)"</h5>
+                      <p>Cohen's paper discusses the over-reliance on p-values in scientific research and emphasizes the need for a more nuanced interpretation of statistical significance.</p>
                       <br>
-                      <h4>Poisson Distribution</h4>
-                      <p>The Poisson distribution is a discrete probability distribution that expresses the probability of a given number of events occurring in a fixed interval of time or space. The formula for the Poisson distribution is:</p>
-                      <p class="formula">\(P(X=k) = \frac{\lambda^k e^{-\lambda}}{k!}\)</p>
-                      <p>where \(P(X=k)\) is the probability of \(k\) events occurring in the interval, \(\lambda\) is the rate parameter, and \(k!\) is the factorial of \(k\).</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h3>Sampling Distributions</h3>
-                      <p>Sampling distributions describe the probability of different outcomes from a sample of data. The central limit theorem states that the sampling distribution of the mean approaches a normal distribution as the sample size increases, regardless of the shape of the population distribution.</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h4>Point Estimation</h4>
-                      <p>Point estimation involves using a single value to estimate the population parameter. The most commonly used point estimator is the sample mean, which is calculated using the formula:</p>
-                      <p class="formula">\(\bar{x} = \frac{1}{n}\sum_{i=1}^{n}x_i\)</p>
-                      <p>where \(\bar{x}\) is the sample mean, \(n\) is the sample size, and \(x_i\) are the individual values in the sample.</p>
+                      <h5>Efron, B. (1979). "Bootstrap Methods: Another Look at the Jackknife"</h5>
+                      <p>This paper introduces the bootstrap method, a powerful resampling technique for estimating the sampling distribution of a statistic and assessing its variability.</p>
                       <br>
-                      <h4>Interval Estimation</h4>
-                      <p>Interval estimation involves using a range of values to estimate the population parameter. The most commonly used interval estimator is the confidence interval, which is calculated using the formula:</p>
-                      <p class="formula">\((\bar{x} - z_{\alpha/2}\frac{s}{\sqrt{n}}, \bar{x} + z_{\alpha/2}\frac{s}{\sqrt{n}})\)</p>
-                      <p>where \(\bar{x}\) is the sample mean, \(s\) is the sample standard deviation, \(n\) is the sample size, and \(z_{\alpha/2}\) is the critical value of the standard normal distribution for a given level of confidence \(\alpha\).</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h3>Hypothesis Testing</h3>
-                      <p>Hypothesis testing involves testing a hypothesis about a population parameter. The null hypothesis is the hypothesis that there is no difference between the sample and the population, while the alternative hypothesis is the hypothesis that there is a difference. The p-value is the probability of obtaining a sample statistic as extreme as the one observed, assuming that the null hypothesis is true.</p>
-                      <p>The most commonly used hypothesis test is the t-test, which is used to test the difference between two means. The formula for the t-test is:</p>
-                      <p class="formula">\(t = \frac{\bar{x}_1 - \bar{x}_2}{s_p\sqrt{\frac{1}{n_1} + \frac{1}{n_2}}}\)</p>
-                      <p>where \(\bar{x}_1\) and \(\bar{x}_2\) are the sample means, \(s_p\) is the pooled standard deviation, \(n_1\) and \(n_2\) are the sample sizes, and \(t\) is the t-statistic.</p>
-                    </div>
-                    <br>
-                    <hr>
-                    <div class="text-box">
-                      <h5>References</h5>
-                      <ul>
-                        <li>
-                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Casella, G., & Berger, R. L. (2002). Statistical Inference. Duxbury Press.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Eid, M., Gollwitzer, M., & Schmitt, M. (2017). Statistik und Forschungsmethoden: Lehrbuch. Mit Online-Material [Statistics and research methods: Textbook.</p>
-                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With online material] (5th ed.). Beltz.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Navidi, W. (2014). Statistics for Engineers and Scientists. McGraw-Hill Education.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Newbold, P., Carlson, W., & Thorne, B. (2019). Statistics for Business and Economics. Pearson.</p>
-                        </li>
+                      <h5>Fisher, R. A. (1922). "On the Mathematical Foundations of Theoretical Statistics"</h5>
+                      <p>This seminal paper by Fisher lays the foundation for modern statistical theory, introducing concepts such as maximum likelihood estimation and hypothesis testing.</p>
+                      <br>
+                      <h5>Gigerenzer, G. (2004). "Mindless statistics"</h5>
+                      <p>This paper criticizes the mindless use of null hypothesis significance testing in research and proposes a more thoughtful approach to statistical analysis.</p>
+                      <br>
+                      <h5>Neyman, J., & Pearson, E. S. (1933). "On the Problem of the Most Efficient Tests of Statistical Hypotheses"</h5>
+                      <p>This paper introduces the Neyman-Pearson lemma, a fundamental result in hypothesis testing that provides a basis for the construction of most powerful tests.</p>
+                      <br>
+                      <h5>Taleb, N. N. (2007). "The Black Swan: The Impact of the Highly Improbable"</h5>
+                      <p>In this book, Taleb discusses the extreme impact of rare and unpredictable outlier events and the human tendency to find simplistic explanations for these events retrospectively, introducing the concept of the Black Swan.</p>
+                      <br>
+                      <h5>Tibshirani, R. (1996). "Regression Sbrinkage and Selection via the Lasso"</h5>
+                      <p>This paper introduces the Lasso method, a widely used technique for variable selection and regularization in linear regression models.</p>
+                      <br>
+                      <h5>Tukey, J. W. (1977). "Exploratory Data Analysis"</h5>
+                      <p>This influential book by Tukey introduces the concept of exploratory data analysis, emphasizing the importance of visualizing and summarizing data before applying formal statistical methods.</p>
+                      <br>
+                      <hr>
+                      <h3>References</h3>
+                      <ul style="list-style: none; padding-left: 0;">
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Benjamini, Y., & Hochberg, Y. (1995). Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing. Journal of the Royal Statistical Society. Series B(Methodological), 57(1), 289-300. <a href="https://doi.org/10.1111/j.2517-6161.1995.tb02031.x" target="_blank">https://doi.org/10.1111/j.2517-6161.1995.tb02031.x</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Box, G. E. P., & Jenkins, G. M. (1970). Time Series Analysis: Forecasting and Control. Holden-Day.</li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Cohen, J. (1994). The Earth is Round (p < .05). American Psychologist, 49(12), 997-1003. <a href="https://doi.org/10.1037/0003-066X.49.12.997" target="_blank">https://doi.org/10.1037/0003-066X.49.12.997</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Efron, B. (1979). Bootstrap Methods: Another Look at the Jackknife. The Annals of Statistics, 7(1), 1-26. <a href="https://doi.org/10.1214/aos/1176344552" target="_blank">https://doi.org/10.1214/aos/1176344552</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Fisher, R. A. (1922). On the Mathematical Foundations of Theoretical Statistics. Philosophical Transactions of the Royal Society of London. Series A, Containing Papers of a Mathematical or Physical Character, 222, 309-368. <a href="https://doi.org/10.1098/rsta.1922.0009" target="_blank">https://doi.org/10.1098/rsta.1922.0009</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Gigerenzer, G. (2004). Mindless statistics. Journal of Socio-Economics, 33(5), 587-606. <a href="https://doi.org/10.1016/j.socec.2004.09.033" target="_blank">https://doi.org/10.1016/j.socec.2004.09.033</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Neyman, J., & Pearson, E. S. (1933). On the Problem of the Most Efficient Tests of Statistical Hypotheses. Philosophical Transactions of the Royal Society of London. Series A, Containing of a Mathematical or Physical Character, 231, 289-337. <a href="https://doi.org/10.1098/rsta.1933.0009" target="_blank">https://doi.org/10.1098/rsta.1933.0009</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Taleb, N. N. (2007). The Black Swan: The Impact of the Highly Improbable. Random House.</li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Tibshirani, R. (1996). Regression Shrinkage and Selection via the Lasso. Journal of the Royal Statistical Society. Series B (Methodological), 58(1), 267-288. <a href="https://doi.org/10.1111/j.2517-6161.1996.tb02080.x" target="_blank">https://doi.org/10.1111/j.2517-6161.1996.tb02080.x</a></li>
+                        <li style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Tukey, J. W. (1977). Exploratory Data Analysis. Addison-Wesley.</li>
                       </ul>
                     </div>                    
                     </div>
