--- a/old/great-articals.html
+++ b/old/great-articals.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Template Mo">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
-    <title>Selvastics: Statistics and Data Analysis Tutorials</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-edu-meeting.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/lightbox.css">
-<!--
-
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <meta content="" name="description"/>
+  <meta content="selvastics" name="author"/>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet"/>
+  <title>
+   Selvastics: Statistics and Data Analysis Tutorials
+  </title>
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- Additional CSS Files -->
+  <link href="assets/css/fontawesome.css" rel="stylesheet"/>
+  <link href="assets/css/templatemo-edu-meeting.css" rel="stylesheet"/>
+  <link href="assets/css/owl.css" rel="stylesheet"/>
+  <link href="assets/css/lightbox.css" rel="stylesheet"/>
+  <!--
 -->
  </head>
  <body>
@@ -148,7 +140,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>inferential indices</h2>
+          <h2>descriptive indices</h2>
           <h6>by selvastics</h6>
         </div>
       </div>
@@ -158,7 +150,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inferential Statistics</title>
+    <title>Descriptive Statistics</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       .meeting-single-item {
@@ -169,7 +161,7 @@
 
 
   <body>
-    <section class="meetings-page" id="meetings";>
+    <section class="meetings-page" id="meetings">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -228,21 +220,23 @@
                     <hr>
                     <div class="text-box">
                       <h5>References</h5>
-                      <ul style="list-style: none; padding-left: 0;">
+                      <ul>
                         <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Casella, G., & Berger, R. L. (2002). Statistical Inference. Duxbury Press.</p>
+                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Casella, G., & Berger, R. L. (2002). Statistical Inference. Duxbury Press.</p>
                         </li>
                         <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Eid, M., Gollwitzer, M., & Schmitt, M. (2017). Statistik und Forschungsmethoden: Lehrbuch. Mit Online-Material [Statistics and research methods: Textbook. With online material] (5th ed.). Beltz.</p>
+                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Eid, M., Gollwitzer, M., & Schmitt, M. (2017). Statistik und Forschungsmethoden: Lehrbuch. Mit Online-Material [Statistics and research methods: Textbook.</p>
+                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With online material] (5th ed.). Beltz.</p>
                         </li>
                         <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Navidi, W. (2014). Statistics for Engineers and Scientists. McGraw-Hill Education.</p>
+                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Navidi, W. (2014). Statistics for Engineers and Scientists. McGraw-Hill Education.</p>
                         </li>
                         <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Newbold, P., Carlson, W., & Thorne, B. (2019). Statistics for Business and Economics. Pearson.</p>
+                          <p style="font-size: 0.8em;">&nbsp;&nbsp;&nbsp;Newbold, P., Carlson, W., & Thorne, B. (2019). Statistics for Business and Economics. Pearson.</p>
                         </li>
-                      </ul>                  
+                      </ul>
                     </div>                    
+                    </div>
                   </div>
                 </div>
               </div>
