--- a/great-articles.html
+++ b/great-articles.html
@@ -136,7 +136,7 @@
                               <li><a href="inferences.html">Inferential Statistics</a></li>
                           </ul>
                       </li>
-                      <li><a href="great-articals.html">Great Articles</a></li>
+                      <li><a href="great-articles.html">Great Articles</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
@@ -153,11 +153,11 @@
 <!-- ***** Header Area End ***** -->
 
 
-  <section class="heading-page header-text" id="top">
+  <section class="heading-page2 header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>great articals</h2>
+          <h2>great articles</h2>
           <h6>by selvastics</h6>
         </div>
       </div>
@@ -167,7 +167,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Great articals</title>
+    <title>Great articles</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       .meeting-single-item {
@@ -186,7 +186,7 @@
               <div class="col-lg-12">
                 <div class="meeting-single-item">
                   <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
-                    <h1>Great Articals in Statistics</h1>
+                    <h1>Great articles in Statistics</h1>
                     <p>This blog post highlights some of the most influential papers in the field of statistics. These papers cover a range of topics in statistical probability, including hypothesis testing, exploratory data analysis, rare events, resampling methods, time series analysis, model selection, multiple testing, and regression analysis.</p>
                     <hr>
                     <div class="text-box">
