--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                               <li><a href="inferences.html">Inferential Statistics</a></li>
                           </ul>
                       </li>
-                      <li><a href="great-articals.html">Great Articles</a></li>
+                      <li><a href="great-articles.html">Great Articles</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
@@ -289,27 +289,27 @@
        </h4>
        <ul>
         <li>
-         <a href="#">
+         <a href="descriptives.html">
           Descriptive Statistics
          </a>
         </li>
         <li>
-         <a href="#">
+         <a href="inferences.html">
           Inferential Statistics
          </a>
         </li>
         <li>
-         <a href="#">
+         <a href="javascript:alert('Coming Soon!');">
           Regression Analysis
          </a>
         </li>
         <li>
-         <a href="#">
+         <a href="javascript:alert('Coming Soon!');">
           Hypothesis Testing
          </a>
         </li>
         <li>
-         <a href="#">
+         <a href="javascript:alert('Coming Soon!');">
           Data Visualization
          </a>
         </li>
