--- a/inferences.html
+++ b/inferences.html
@@ -137,7 +137,7 @@
                               <li><a href="inferences.html">Inferential Statistics</a></li>
                           </ul>
                       </li>
-                      <li><a href="great-articals.html">Great Articles</a></li>
+                      <li><a href="great-articles.html">Great Articles</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                   <!-- ***** Menu End ***** -->
@@ -154,7 +154,7 @@
 <!-- ***** Header Area End ***** -->
 
 
-  <section class="heading-page header-text" id="top">
+  <section class="heading-page3 header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
