--- a/descriptives.html
+++ b/descriptives.html
@@ -285,7 +285,7 @@
     </div>
     <div class="footer">
       <p>
-       Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
+       Copyright © 2023 Selvastics. Made with &hearts; and ☕ in Cologne, Germany. All Rights Reserved.
       </p>
      </div>
     </section>
