--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     <footer style="flex-shrink: 0; margin-top: -90px; margin-bottom: -100px;">
       <div class="footer">
         <p>
-          Copyright © 2023 Selvastics. Made with &lt;3 and ☕ in Cologne, Germany. All Rights Reserved.
+          Copyright © 2023 Selvastics. Made with &hearts; and ☕ in Cologne, Germany. All Rights Reserved.
         </p>
       </div>
     </footer>
