first blog entry
Previously i set up the website and implemented basic pages. today i contribute my first blog page :)

--- a/descriptives.html
+++ b/descriptives.html
@@ -147,6 +147,7 @@
                           <ul class="sub-menu">
                               <li><a href="descriptives.html">Descriptive Statistics</a></li>
                               <li><a href="inferences.html">Inferential Statistics</a></li>
+                              <li><a href="sosci_feedback.html">Participant Feedback</a></li>
                           </ul>
                       </li>
                       <li><a href="great-articles.html">Great Articles</a></li>
