--- a/sosci_feedback.html
+++ b/sosci_feedback.html
@@ -5,7 +5,7 @@
   
 
   <head>
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Y6G9HWWF7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,7 +14,6 @@
 
   gtag('config', 'G-8Y6G9HWWF7');
 </script>
-
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -168,11 +167,11 @@
 <!-- ***** Header Area End ***** -->
 
 
-  <section class="heading-page3 header-text" id="top">
+  <section class="heading-page5 header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>inferential indices</h2>
+          <h2>participant feedback</h2>
           <h6>by selvastics</h6>
         </div>
       </div>
@@ -182,7 +181,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inferential Statistics</title>
+    <title>Participant feedback</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       .meeting-single-item {
@@ -201,72 +200,21 @@
               <div class="col-lg-12">
                 <div class="meeting-single-item">
                   <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
-                    <h1>Inferential Statistics</h1>
-                    <p>Inferential statistics is a branch of statistics that deals with making predictions or inferences about a population based on a sample of data taken from the population. In this section, I'll discuss probability distributions, sampling distributions, estimation, and hypothesis testing.</p>
-                    <hr>
-                    <div class="text-box">
-                      <h3>Probability Distributions</h3>
-                      <p>Probability distributions describe the likelihood of different outcomes in an experiment or event. The most commonly used ones in inferential statistics are the normal distribution, the binomial distribution, and the Poisson distribution.</p>
-                      <br>
-                      <h4>Normal Distribution</h4>
-                      <p>The normal distribution, also known as the Gaussian distribution, is a probability distribution that is symmetric about the mean, showing that data near the mean are more frequent in occurrence than data far from the mean. The formula for the normal distribution is:</p>
-                      <p class="formula">\(f(x) = \frac{1}{\sigma\sqrt{2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}\)</p>
-                      <p>where \(f(x)\) is the probability density function, \(\mu\) is the mean, \(\sigma\) is the standard deviation, and \(x\) is the random variable.</p>
-                      <br>
-                      <h4>Binomial Distribution</h4>
-                      <p>The binomial distribution is a discrete probability distribution of the number of successes in a sequence of n independent experiments. The formula for the binomial distribution is:</p>
-                      <p class="formula">\(P(X=k) = {n \choose k}p^k(1-p)^{n-k}\)</p>
-                      <p>where \(P(X=k)\) is the probability of \(k\) successes in \(n\) trials, \(p\) is the probability of success, and \({n \choose k}\) is the binomial coefficient.</p>
-                      <br>
-                      <h4>Poisson Distribution</h4>
-                      <p>The Poisson distribution is a discrete probability distribution that expresses the probability of a given number of events occurring in a fixed interval of time or space. The formula for the Poisson distribution is:</p>
-                      <p class="formula">\(P(X=k) = \frac{\lambda^k e^{-\lambda}}{k!}\)</p>
-                      <p>where \(P(X=k)\) is the probability of \(k\) events occurring in the interval, \(\lambda\) is the rate parameter, and \(k!\) is the factorial of \(k\).</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h3>Sampling Distributions</h3>
-                      <p>Sampling distributions describe the probability of different outcomes from a sample of data. The central limit theorem states that the sampling distribution of the mean approaches a normal distribution as the sample size increases, regardless of the shape of the population distribution.</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h4>Point Estimation</h4>
-                      <p>Point estimation involves using a single value to estimate the population parameter. The most commonly used point estimator is the sample mean, which is calculated using the formula:</p>
-                      <p class="formula">\(\bar{x} = \frac{1}{n}\sum_{i=1}^{n}x_i\)</p>
-                      <p>where \(\bar{x}\) is the sample mean, \(n\) is the sample size, and \(x_i\) are the individual values in the sample.</p>
-                      <br>
-                      <h4>Interval Estimation</h4>
-                      <p>Interval estimation involves using a range of values to estimate the population parameter. The most commonly used interval estimator is the confidence interval, which is calculated using the formula:</p>
-                      <p class="formula">\((\bar{x} - z_{\alpha/2}\frac{s}{\sqrt{n}}, \bar{x} + z_{\alpha/2}\frac{s}{\sqrt{n}})\)</p>
-                      <p>where \(\bar{x}\) is the sample mean, \(s\) is the sample standard deviation, \(n\) is the sample size, and \(z_{\alpha/2}\) is the critical value of the standard normal distribution for a given level of confidence \(\alpha\).</p>
-                    </div>
-                    <br>
-                    <div class="text-box">
-                      <h3>Hypothesis Testing</h3>
-                      <p>Hypothesis testing involves testing a hypothesis about a population parameter. The null hypothesis is the hypothesis that there is no difference between the sample and the population, while the alternative hypothesis is the hypothesis that there is a difference. The p-value is the probability of obtaining a sample statistic as extreme as the one observed, assuming that the null hypothesis is true.</p>
-                      <p>The most commonly used hypothesis test is the t-test, which is used to test the difference between two means. The formula for the t-test is:</p>
-                      <p class="formula">\(t = \frac{\bar{x}_1 - \bar{x}_2}{s_p\sqrt{\frac{1}{n_1} + \frac{1}{n_2}}}\)</p>
-                      <p>where \(\bar{x}_1\) and \(\bar{x}_2\) are the sample means, \(s_p\) is the pooled standard deviation, \(n_1\) and \(n_2\) are the sample sizes, and \(t\) is the t-statistic.</p>
-                    </div>
-                    <br>
-                    <hr>
-                    <div class="text-box">
-                      <h5>References</h5>
-                      <ul style="list-style: none; padding-left: 0;">
-                        <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Casella, G., & Berger, R. L. (2002). Statistical Inference. Duxbury Press.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Eid, M., Gollwitzer, M., & Schmitt, M. (2017). Statistik und Forschungsmethoden: Lehrbuch. Mit Online-Material [Statistics and research methods: Textbook. With online material] (5th ed.). Beltz.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Navidi, W. (2014). Statistics for Engineers and Scientists. McGraw-Hill Education.</p>
-                        </li>
-                        <li>
-                          <p style="font-size: 0.8em; text-indent: -20px; padding-left: 20px; margin: 0;">Newbold, P., Carlson, W., & Thorne, B. (2019). Statistics for Business and Economics. Pearson.</p>
-                        </li>
-                      </ul>                  
-                    </div>                    
+                    
+                    
+                    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+                    <style>
+                    iframe {
+                      width: 100%;
+                      height: 2090vh; /* 100% of the viewport height */
+                      overflow: hidden !important; /* Disable scrolling down with CSS */
+                    }
+                  </style>
+
+                  <iframe id="myIframe" src="blogarticles/guide_participant_report.html"scrolling="no"></iframe>
+
+
                   </div>
                 </div>
               </div>
