--- a/blogarticles/guide_participant_report.html
+++ b/blogarticles/guide_participant_report.html
@@ -606,7 +606,7 @@ Nähere Informationen in &quot;The Five-Factor Model of Personality: Theoretical
 &lt;/script&gt;
 </code></pre>
 </div></code></pre>
-<h2 id="4-addressing-common-issues"><a class="markdownIt-Anchor" href="#4-addressing-common-issues"></a> 4. Addressing common issues</h2>
+<h2 id="4-addressing-common-issues"><a class="markdownIt-Anchor" href="#4-addressing-common-issues"></a> 4 Addressing common issues</h2>
 <p>This section aims to address common issues that may arise during the implementation of graphical feedback in SoSci Survey. It covers topics like error resolution, debugging, handling missing values, PDF formatting, and more.</p>
 <h3 id="common-errors-and-their-resolutions"><a class="markdownIt-Anchor" href="#common-errors-and-their-resolutions"></a> Common errors and their resolutions</h3>
 <h4 id="not-all-scales-are-on-the-same-metric"><a class="markdownIt-Anchor" href="#not-all-scales-are-on-the-same-metric"></a> Not all scales are on the same metric</h4>
@@ -626,19 +626,19 @@ Nähere Informationen in &quot;The Five-Factor Model of Personality: Theoretical
 <strong>A:</strong> Consult the PHP error logs for in-depth information regarding the errors. Make sure that error reporting is enabled in your PHP settings for a comprehensive diagnostic overview. Note that some error messages appearing below the PHP code box may be benign and can be overlooked; however, exercise caution when interpreting error messages.</p>
 <p><strong>Q: Can I include both a radar plot and a bar plot in the same PDF?</strong><br>
 <strong>A:</strong> Yes, it is possible to incorporate multiple plots within a single PDF. This can be achieved by creating separate canvas elements for each plot and rendering them individually. Be aware that this may require adjustments to the plot dimensions within the PDF or necessitate the creation of multiple PDF pages.</p>
-<p><strong>Q: Despite my efforts, my code still isn't working. What should I do?</strong><br>
+<p><strong>Q: Despite my efforts, my code still is not working. What should I do?</strong><br>
 <strong>A:</strong> If troubleshooting proves ineffective, consider implementing the <code>.xml</code> file provided in the resource section and building your questionnaire from that foundation.</p>
 <p><strong>Q: The plot in my PDF file appears distorted. How can I rectify this?</strong><br>
 <strong>A:</strong> To correct distorted plot dimensions, modify the <code>height</code> and <code>width</code> properties in the Chart.js configuration settings.</p>
 <p><strong>Q: How can I contribute to this project?</strong><br>
 <strong>A:</strong> Contributions are welcome. Feel free to share your code examples and offer additional suggestions to enhance the project's utility.</p>
-<h2 id="5-resources"><a class="markdownIt-Anchor" href="#5-resources"></a> 5. Resources</h2>
+<h2 id="5-resources"><a class="markdownIt-Anchor" href="#5-resources"></a> 5 Resources</h2>
 <ul>
 <li>Complete sosci project (<code>full.xml</code> -file)</li>
 <li>BFI sosci page only (<code>page.xml</code> -file)</li>
 </ul>
 <p>You can download them <a target="_blank" href="https://github.com/selvastics/selvastics.github.io/tree/main/resources/partcipant_report">here</a></p>
-<h2 id="6-additional-examples"><a class="markdownIt-Anchor" href="#6-additional-examples"></a> 6. Additional examples</h2>
+<h2 id="6-additional-examples"><a class="markdownIt-Anchor" href="#6-additional-examples"></a> 6 Additional examples</h2>
 <p><strong>Simple bar plot:</strong></p>
 <p>For PHP:</p>
 <pre><code class="language-php"><div class="code-snippet">
